Adding trainer, hifigan, mos metric and dataset

--- a/src/configs/metrics/example.yaml
+++ b/src/configs/metrics/example.yaml
@@ -1,6 +1,8 @@
-train: [] # metrics that are calculated during training
+train:
+  - _target_: src.metrics.MOSMetric
+    name: "MOSMetric" # metrics that are calculated during training
 inference: # metrics that are calculated during inference (eval)
-  - _target_: src.metrics.ArgmaxCERMetric
-    name: "CER_(Argmax)" # it is better to avoid spaces in names
-  - _target_: src.metrics.ArgmaxWERMetric
-    name: "WER_(Argmax)"
+  - _target_: src.metrics.MOSMetric
+    name: "MOSMetric"
+  # - _target_: src.metrics.ArgmaxWERMetric
+  #   name: "WER_(Argmax)"
