--- a/src/configs/datasets/kaggle.yaml
+++ b/src/configs/datasets/kaggle.yaml
@@ -2,3 +2,7 @@ train:
   _target_: src.datasets.WavDataset
   wav_dir: "/kaggle/input/ljspeechdatasethifigan/data/wavs"
   instance_transforms: ${transforms.instance_transforms.train}
+val:
+  _target_: src.datasets.WavDataset
+  wav_dir: "/kaggle/input/validation/validation"
+  instance_transforms: ${transforms.instance_transforms.train} 
