--- a/src/configs/kaggle.yaml
+++ b/src/configs/kaggle.yaml
@@ -32,7 +32,7 @@ trainer:
   resume_from: "/kaggle/input/first-checkpoint/model_best.pth" # null or path to the checkpoint dir with *.pth and config.yaml
   device: auto # device name or "auto"
   override: True # if True, will override the previous run with the same name
-  monitor: "max MOSMetric_val" # "off" or "max/min metric_name", i.e. our goal is to maximize/minimize metric
+  monitor: "max val_MOSMetric" # "off" or "max/min metric_name", i.e. our goal is to maximize/minimize metric
   save_period: 5 # checkpoint each save_period epochs in addition to the best epoch
   early_stop: ${trainer.n_epochs} # epochs for early stopping
   save_dir: "saved"
