--- a/src/configs/inference.yaml
+++ b/src/configs/inference.yaml
@@ -1,13 +1,13 @@
 defaults:
-  - model: baseline
-  - metrics: example
-  - datasets: example_eval # we do not want to run inference on training data
-  - dataloader: example
-  - transforms: example
+  - generator: generator
+  - metrics: hifi_gan
+  - datasets: inference # we do not want to run inference on training data
+  - dataloader: onebatch
+  - transforms: example_only_instance
   - _self_
 inferencer:
-  device_tensors: ["data_object", "labels"] # which tensors should be on device (ex. GPU)
+  device_tensors: ["spectrogram"] # which tensors should be on device (ex. GPU)
   device: auto # device name or "auto"
   save_path: "example" # any name here, can be a dataset name
   seed: 1
-  from_pretrained: "saved/model_best.pth" # path to the pretrained model
+  from_pretrained: "/Users/legend/Desktop/Универ/4/DLA/new_hw3/pytorch_project_template/saved/checkpoint-epoch60.pth" # path to the pretrained model
