--- a/src/configs/kaggle.yaml
+++ b/src/configs/kaggle.yaml
@@ -26,13 +26,13 @@ d_lr_scheduler:
   gamma: 0.999
 trainer:
   log_step: 50
-  n_epochs: 70
+  n_epochs: 150
   epoch_len: 200
   device_tensors: ["spectrogram", "audio"] # which tensors should be on device (ex. GPU)
   resume_from: null # null or path to the checkpoint dir with *.pth and config.yaml
   device: auto # device name or "auto"
   override: True # if True, will override the previous run with the same name
-  monitor: "max val_MOSMetric" # "off" or "max/min metric_name", i.e. our goal is to maximize/minimize metric
+  monitor: "max MOSMetric" # "off" or "max/min metric_name", i.e. our goal is to maximize/minimize metric
   save_period: 5 # checkpoint each save_period epochs in addition to the best epoch
   early_stop: ${trainer.n_epochs} # epochs for early stopping
   save_dir: "saved"
