--- a/src/configs/datasets/lj_speech.yaml
+++ b/src/configs/datasets/lj_speech.yaml
@@ -1,9 +1,9 @@
 train:
   _target_: src.datasets.WavDataset
   wav_dir: "/Users/legend/Desktop/Универ/4/DLA/new_hw3/LJSpeech-1.1/wavs"
-  limit: 2
+  crop: True
   instance_transforms: ${transforms.instance_transforms.train}
-val:
-  _target_: src.datasets.WavDataset
-  wav_dir: "/Users/legend/Desktop/Универ/4/DLA/new_hw3/validation"
-  instance_transforms: ${transforms.instance_transforms.train} 
+# val:
+#   _target_: src.datasets.WavDataset
+#   wav_dir: "/Users/legend/Desktop/Универ/4/DLA/new_hw3/validation"
+#   instance_transforms: ${transforms.instance_transforms.train} 
